fix z-index

--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,6 @@
 
 .first-section {
   background-color: var(--blue-color);
-  z-index: -1;
 }
 
 .second-section, .four-section {
